<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#ffffff" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/used_subject"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />

       	<TextView
            android:id="@+id/awooseong_compact_used_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="7"
            android:gravity="center"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/buy_or_sell"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/awooseong_compact_used_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/theme_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="mOnClick"
                android:text="@string/buy"
                android:textSize="@dimen/middle_text" />

            <TextView
                android:id="@+id/awooseong_compact_used_sell"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/theme_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="mOnClick"
                android:text="@string/sell"
                android:textSize="@dimen/middle_text" />
            
            </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/asking_price"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/awooseong_compact_used_asking_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="7"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/middle_text" />
    </LinearLayout>

</LinearLayout>
