<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#ffffff" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/question_subject"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/awooseong_compact_question_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="7"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/is_completed"
            android:textSize="@dimen/middle_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/awooseong_compact_question_is_completed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/theme_padding"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/uncompleted"
            android:textSize="@dimen/middle_text" />
    </LinearLayout>

    
</LinearLayout>
